--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="">
 
 
-    <title>Flatrica | Material CV/Resume</title>
+    <title>My CV - Thanh Nguyen</title>
     <link rel="icon" href="images/fav-icon.png">
 
     <!--APPLE TOUCH ICON-->
@@ -55,8 +55,8 @@
             </div>
             <!-- NAME & STATUS -->
             <div class="text-holder text-center">
-                <h2>JOHN DOE</h2>
-                <h6>Software Engineer & UI/UX Expert</h6>
+                <h2>Thanh Nguyen</h2>
+                <h6>Fullstack Development</h6>
             </div>
         </div>
     </div>
@@ -83,11 +83,11 @@
             <a href="#education"><i class="title-icon fa fa-graduation-cap"></i>Education</a>
             <a href="#skills"><i class="title-icon fa fa-sliders"></i>Skills</a>
             <a href="#experience"><i class="title-icon fa fa-suitcase"></i>Experience</a>
-            <a href="#portfolios"><i class="title-icon fa fa-archive"></i>Portfolios</a>
+<!--            <a href="#portfolios"><i class="title-icon fa fa-archive"></i>Portfolios</a>-->
             <a href="#interest"><i class="title-icon fa fa-heart"></i>Interest</a>
             <a href="#testimonials"><i class="title-icon fa fa-users"></i>Testimonials</a>
-            <a href="#pricing-table"><i class="title-icon fa fa-money"></i>Pricing</a>
-            <a href="#blog"><i class="title-icon fa fa-pencil-square"></i>Blog</a>
+<!--            <a href="#pricing-table"><i class="title-icon fa fa-money"></i>Pricing</a>-->
+<!--            <a href="#blog"><i class="title-icon fa fa-pencil-square"></i>Blog</a>-->
             <a href="#contact"><i class="title-icon fa fa-envelope"></i>Contact</a>
         </div>
 
@@ -112,42 +112,41 @@
 
                             <!-- PROFILE PICTURE -->
                             <div id="profile" class="right">
-                                <img alt="profile-image" class="img-responsive" src="images/profile.png">
+                                <img alt="profile-image" class="img-responsive" src="images/profile.jpg">
                                 <div class="slant"></div>
-                                <div class="btn-floating btn-large add-btn">
-                                    <i class="material-icons">add</i></div>
+<!--                                <div class="btn-floating btn-large add-btn">-->
+<!--                                    <i class="material-icons">add</i></div>-->
                             </div>
 
                             <div class="card-content">
 
                                 <!-- NAME & STATUS -->
                                 <div class="info-headings">
-                                    <h4 class="text-uppercase left">John DOE</h4>
-                                    <h6 class="text-capitalize left">Software Engineer & UI/UX Expert</h6>
+                                    <h4 class="text-uppercase left">Thanh Nguyen</h4>
+                                    <h6 class="text-capitalize left">Fullstack Development</h6>
                                 </div>
-
                                 <!-- CONTACT INFO -->
                                 <div class="infos">
                                     <ul class="profile-list">
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">email</i></span>
-                                            <span class="content">email@mailprovider.com</span>
+                                            <span class="content">bathanh4996@gmail.com</span>
                                         </li>
-                                        <li class="clearfix">
-                                            <span class="title"><i class="material-icons">language</i></span>
-                                            <span class="content">yourpersonalwebsite.com</span>
-                                        </li>
+<!--                                        <li class="clearfix">-->
+<!--                                            <span class="title"><i class="material-icons">language</i></span>-->
+<!--                                            <span class="content">yourpersonalwebsite.com</span>-->
+<!--                                        </li>-->
                                         <li class="clearfix">
                                             <span class="title"><i class="fa fa-skype" aria-hidden="true"></i></span>
-                                            <span class="content">yourusername@skype.com</span>
+                                            <span class="content">wolfuno1996@gmail.com</span>
                                         </li>
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">phone</i></span>
-                                            <span class="content">+152 25634 254 846</span>
+                                            <span class="content">+84 9867 075 867</span>
                                         </li>
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">place</i></span>
-                                            <span class="content">LampStreet 34/3, London, UK</span>
+                                            <span class="content">Long Bien, Ha Noi, Viet Nam</span>
                                         </li>
 
                                     </ul>
@@ -156,21 +155,15 @@
                                 <!--LINKS-->
                                 <div class="links">
                                     <!-- FACEBOOK-->
-                                    <a href="#" id="first_one"
+                                    <a href="https://www.facebook.com/soigia1996" id="first_one"
                                        class="social btn-floating indigo"><i
                                             class="fa fa-facebook"></i></a>
-                                    <!-- TWITTER-->
-                                    <a href="#" class="social  btn-floating blue"><i
-                                            class="fa fa-twitter"></i></a>
                                     <!-- GOOGLE+-->
                                     <a href="#" class="social  btn-floating red"><i
                                             class="fa fa-google-plus"></i></a>
                                     <!-- LINKEDIN-->
                                     <a href="#" class="social  btn-floating blue darken-3"><i
                                             class="fa fa-linkedin"></i></a>
-                                    <!-- RSS-->
-                                    <a href="#" class="social  btn-floating orange darken-3"><i
-                                            class="fa fa-rss"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -193,11 +186,9 @@
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
                         <p>
-                            Hello! I’m John Doe. Senior Web Developer with over 13 years of experience
-                            specializing in front end development. Experienced with all stages of the
-                            development cycle for dynamic web projects.Having an in-depth knowledge
-                            including advanced HTML5, CSS, CSS3, SASS, LESS, JSON, XML, Java, JavaScript,
-                            JQuery, Angular JS. Strong background in management and leadership.
+                            Hi! I’m Thanh Nguyen. Junior Web Developer with 2 years of experience
+                            specializing in backend development and understanding about front end development.Experienced with all stages of the
+                            development cycle for dynamic web projects.The main language I used for BE is PHP(Codeignter, Laravel) and Nodejs. Frontend I use HTML,CSS,Javascript (ReactJs).Strong background in teamwork and independent work.
                         </p>
                     </div>
 
@@ -227,94 +218,7 @@
         </div>
 
         <div id="timeline-education">
-
-            <!-- FIRST TIMELINE -->
-            <div class="timeline-block">
-                <!-- DOT -->
-                <div class="timeline-dot"><h6>P</h6></div>
-                <!-- TIMELINE CONTENT -->
-                <div class="card timeline-content">
-                    <div class="card-content">
-                        <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Preparatory Education</h6>
-                        <!-- TIMELINE TITLE INFO -->
-                        <div class="timeline-info">
-                            <h6>
-                                <small>Fedrick School</small>
-                            </h6>
-                            <h6>
-                                <small>Jan 1997 - Mar 2000</small>
-                            </h6>
-                        </div>
-                        <!-- TIMELINE PARAGRAPH -->
-                        <p>
-                            I completed my preparatory education from this prestigious institution.
-                            I successful completed all the credits without any fallout and got A grade overall.
-                        </p>
-                        <!-- BUTTON TRIGGER MODAL -->
-                        <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-1">
-                            <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SECOND TIMELINE -->
-            <div class="timeline-block">
-                <!-- DOT -->
-                <div class="timeline-dot"><h6>H</h6></div>
-                <!-- TIMELINE CONTENT -->
-                <div class="card timeline-content">
-                    <div class="card-content">
-                        <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">High School</h6>
-                        <!-- TIMELINE TITLE INFO -->
-                        <div class="timeline-info">
-                            <h6>
-                                <small>RedStreet College</small>
-                            </h6>
-                            <h6>
-                                <small>Jan 2000 - Mar 2005</small>
-                            </h6>
-                        </div>
-                        <!-- TIMELINE PARAGRAPH -->
-                        <p>
-                            I completed my high school degree from this prestigious institution.
-                            I successful completed all the credits without any fallout and got A grade overall.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
             <!-- THIRD TIMELINE -->
-            <div class="timeline-block">
-                <!-- DOT -->
-                <div class="timeline-dot"><h6>C</h6></div>
-                <!-- TIMELINE CONTENT -->
-                <div class="card timeline-content">
-                    <div class="card-content">
-                        <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Computer Science</h6>
-                        <!-- TIMELINE TITLE INFO -->
-                        <div class="timeline-info">
-                            <h6>
-                                <small>Down Street College</small>
-                            </h6>
-                            <h6>
-                                <small>Jan 2006 - Mar 2008</small>
-                            </h6>
-                        </div>
-                        <!-- TIMELINE PARAGRAPH -->
-                        <p>
-                            I completed my computer science degree from this prestigious institution.
-                            I successful completed all the credits without any fallout and got A grade overall.
-                        </p>
-
-                    </div>
-                </div>
-            </div>
-
-            <!-- FOURTH TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
                 <div class="timeline-dot"><i class="fa fa-graduation-cap"></i></div>
@@ -322,25 +226,25 @@
                 <div class="card timeline-content">
                     <div class="card-content">
                         <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Software Engineering</h6>
+                        <h6 class="timeline-title">Information Technology</h6>
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
-                                <small>Oxford University</small>
+                                <small>University of Economics - Technology for industries</small>
                             </h6>
                             <h6>
-                                <small>Jan 2009 - Mar 2010</small>
+                                <small>Aug 2014 - Aug 2018</small>
                             </h6>
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
-                            I completed this degree from this prestigious institution.
-                            I successful completed all the credits without any fallout and got A grade overall.
+                            I completed my information technology course from this prestigious university.
+                            I successful completed all the test without any fail and got A engineer degree with good grade.
                         </p>
-
                     </div>
                 </div>
             </div>
+
             <!-- FIFTH TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
